--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-spring/parallax": "^9.7.3",
     "framer-motion": "^11.1.7",
+    "mongodb": "^6.5.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
